# OcicatRecoilEditor

./: .gitignore  CMakeLists.txt  LICENSE  build.bat  compile_commands.json  editor.py  imgui.ini  main.py  readme.md  run.bat
src/: editor.cpp  editor.h  inc.h  main.cpp  pattern.cpp  pattern.h  platform.h  platform_win.cpp
